plugins {
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.4.Final'

    runtimeOnly 'org.xerial:sqlite-jdbc:3.45.3.0'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.register('copyDatabase', Copy) {
    from(layout.projectDirectory.dir('database'))
    into(layout.buildDirectory.dir('database'))
}

tasks.register('runSwing', JavaExec) {
    group = 'application'
    description = 'Run Swing UI'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.example.its.ui.swing.SwingApp'
}
